# rakaia

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  BUILDING.md  CHANGELOG.md  Dockerfile  INSTRUCTIONS.Rmd  LICENSE.md  MANIFEST.in  Makefile  PYAPP.md  Pipfile  README.md  Singularity  pyapp.sh  pyapp_unix.sh  pyapp_windows.sh  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/workflows/: main.yml
benchmarks/: elementwise_operations.ipynb
ccramic/: __init__.py  app.py  dev_debug.py  entrypoint.py  main.py  routes.py  wsgi.py
ccramic/app/: __init__.py  app.py  callbacks.py  entrypoint.py  inputs.py  parsers.py  routes.py  utils.py  wsgi.py
ccramic/app/assets/: styles.css
ccramic/app/callbacks/: cell_level_callbacks.py  cell_level_wrappers.py  pixel_level_callbacks.py  roi_level_callbacks.py
ccramic/app/inputs/: cell_level_inputs.py  pixel_level_inputs.py
ccramic/app/io/: annotation_outputs.py  display.py  gallery_outputs.py
ccramic/app/parsers/: cell_level_parsers.py  pixel_level_parsers.py  roi_parsers.py
ccramic/app/templates/: help.html  home.html
ccramic/assets/: styles.css
ccramic/callbacks/: cell_level_callbacks.py  cell_level_wrappers.py  db.py  db_callbacks.py  object.py  object_wrappers.py  pixel.py  pixel_level_callbacks.py  pixel_level_wrappers.py  pixel_wrappers.py  roi.py  roi_level_callbacks.py  triggers.py
ccramic/components/: canvas.py  layout.py
ccramic/dash_app/: app.py
ccramic/db/: connection.py
ccramic/inputs/: cell_level_inputs.py  loaders.py  object.py  pixel.py  pixel_level_inputs.py
ccramic/io/: annotation.py  annotation_outputs.py  display.py  gallery.py  gallery_outputs.py  pdf.py  readers.py  session.py
ccramic/parsers/: cell_level_parsers.py  object.py  pixel.py  pixel_level_parsers.py  roi.py  roi_parsers.py
ccramic/templates/: help.html  home.html  index.jinja2
ccramic/utils/: alert.py  cell_level_utils.py  cluster.py  db.py  decorator.py  filter.py  graph_utils.py  object.py  pixel.py  pixel_level_utils.py  quantification.py  region.py  roi.py  roi_utils.py  session.py  shapes.py
cli/: autoscale_roi.py  geojson_to_tiff.py
converters/: geojson_to_tiff.py
docs/: build_docs.sh  requirements.txt
docs/source/: ccramic.assets.rst  ccramic.callbacks.rst  ccramic.components.rst  ccramic.db.rst  ccramic.inputs.rst  ccramic.io.rst  ccramic.parsers.rst  ccramic.rst  ccramic.templates.rst  ccramic.utils.rst  conf.py  index.rst  modules.rst  rakaia.assets.rst  rakaia.callbacks.rst  rakaia.components.rst  rakaia.db.rst  rakaia.inputs.rst  rakaia.io.rst  rakaia.parsers.rst  rakaia.plugins.rst  rakaia.register.rst  rakaia.rst  rakaia.static.assets.rst  rakaia.static.rst  rakaia.templates.rst  rakaia.utils.rst
envs/: Pipfile  Singularity  environment.yml  pyproject.toml
examples/: visium_hd_preprocessing.ipynb  xenium_preprocessing.ipynb
man/: README.md
rakaia/: __init__.py  _version.py  app.py  entrypoint.py  wsgi.py
rakaia/assets/: download.js  osd.js  styles.css  theme.js
rakaia/callbacks/: db.py  metadata.py  object.py  object_wrappers.py  pixel.py  pixel_wrappers.py  roi.py  triggers.py
rakaia/components/: canvas.py  layout.py
rakaia/db/: connection.py
rakaia/inputs/: loaders.py  metadata.py  object.py  pixel.py
rakaia/io/: annotation.py  display.py  gallery.py  pdf.py  readers.py  session.py
rakaia/parsers/: lazy_load.py  object.py  pixel.py  roi.py  spatial.py  visium.py
rakaia/plugins/: __init__.py  models.py
rakaia/register/: dzi.py  process.py
rakaia/static/: coregister.dzi
rakaia/templates/: help.html  home.html
rakaia/utils/: alert.py  cluster.py  db.py  decorator.py  filter.py  gradient.py  graph.py  object.py  pixel.py  quantification.py  region.py  roi.py  session.py  shapes.py
scripts/: install.sh  run_ccramic.sh  run_rakaia.sh  update_poetry.sh
standalone/: build.sh  rakaia.spec  rakaia_onedir.spec
tests/: canvas_shapes.json  cell_measurements.csv  channel_metadata.csv  cluster_assignments.csv  conftest.py  data.h5  for_recolour.tiff  from_steinbock.h5ad  imagej_metadata.tiff  intestine_hd_subset.h5ad  measurements_for_query.csv  melanoma_xenium_subset.h5ad  melanoma_xenium_transformation.csv  multi_roi_clusters.csv  page_names.tiff  point_annotations.csv  quantification_anndata.h5ad  query_from_text.txt  rois.pickle  test_alerts.py  test_app_inputs.py  test_basic_connection.py  test_cell_level_inputs.py  test_cell_level_io.py  test_cell_level_parsers.py  test_cell_level_utils.py  test_cell_level_wrappers.py  test_clustering.py  test_component_layout.py  test_components.py  test_db_connection.py  test_db_utils.py  test_decorate.py  test_display_outputs.py  test_filter_parsers.py  test_gallery_outputs.py  test_graph_utils.py  test_lazy_loading.py  test_loaders.py  test_metadata_plots.py  (+25 more)
tests/subset_other_spatial.zarr/: .zattrs  zmetadata
tests/subset_visium.zarr/: zmetadata
tests/subset_visium_hd.zarr/: zmetadata
tests/subset_xenium.zarr/: zmetadata
(+143 files in other folders)
