[project]
name = "rakaia"
version = "0.24a1"
description = "Scalable spatial biology analysis in the browser."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Matthew Watson", email = "mwatson@lunenfeld.ca" }]

license = { file = "LICENSE.md" }
keywords = [
  "imaging", "cytometry", "single-cell", "browser", "multiplexed", "spatial"
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"]

dependencies = [
  "anndata==0.9.1",
  "async-generator==1.10",
  "attrs==23.1.0",
  "beautifulsoup4==4.12.2",
  "botocore==1.38.46",
  "cachelib==0.9.0",
  "certifi==2024.07.04",
  "cffi==1.15.1",
  "charset-normalizer==3.1.0",
  "click==8.1.3",
  "contourpy==1.0.7",
  "cryptography==44.0.1",
  "cycler==0.11.0",
  "Cython==0.29.35",
  "dash==2.18.2",
  "dash-ag-grid==2.3.0",
  "dash-auth==2.0.0",
  "dash-bio==1.0.2",
  "dash-bootstrap-components==1.4.1",
  "dash-canvas==0.1.0",
  "dash-core-components==2.0.0",
  "dash-daq==0.5.0",
  "dash-extensions==1.0.1",
  "dash-google-auth==0.1.2",
  "dash-html-components==2.0.0",
  "dash-mantine-components==0.12.1",
  "dash-table==5.0.0",
  "dash-testing-stub==0.0.2",
  "dash-tour-component==0.0.2",
  "dash-uploader==0.7.0a2",
  "dask==2024.11.2",
  "dask-expr==1.1.19",
  "dask-image==2024.5.3",
  "datashader==0.17.0",
  "dill==0.3.6",
  "diskcache==5.6.1",
  "dnspython==2.7.0",
  "EditorConfig==0.12.3",
  "exceptiongroup==1.1.1",
  "fcswrite==0.6.2",
  "Flask==2.2.5",
  "Flask-Caching==2.0.2",
  "Flask-Cors==6.0.0",
  "Flask-Dance==7.0.0",
  "Flask-HTTPAuth==4.8.0",
  "fonttools==4.43.0",
  "freeport==0.1.15",
  "GEOparse==2.0.4",
  "glasbey==0.2.0",
  "h11==0.16.0",
  "h5py==3.14.0",
  "idna==3.7",
  "igraph==0.10.4",
  "imagecodecs==2023.9.18",
  "imageio==2.33.0",
  "imctools==2.1.8",
  "importlib-metadata==6.6.0",
  "importlib-resources==5.12.0",
  "iniconfig==2.0.0",
  "itsdangerous==2.1.2",
  "Jinja2==3.1.6",
  "joblib==1.2.0",
  "jsbeautifier==1.14.8",
  "kaleido==0.2.1",
  "kiwisolver==1.4.4",
  "lazy_loader==0.4",
  "leidenalg==0.10.2",
  "llvmlite==0.42.0",
  "lxml==5.1.0",
  "MarkupSafe==2.1.3",
  "matplotlib==3.7.1",
  "mongomock==4.1.2",
  "more-itertools==9.1.0",
  "multiprocess==0.70.14",
  "natsort==8.4.0",
  "networkx==3.1",
  "numba==0.59.0",
  "numcodecs==0.13.1",
  "numexpr==2.8.8",
  "numpy==1.26.4",
  "oauthlib==3.2.2",
  "opencv-python-headless==4.8.1.78",
  "outcome==1.2.0",
  "packaging==23.1",
  "pandas==2.3.1",
  "ParmEd==4.3.0",
  "patsy==0.5.3",
  "percy==2.0.2",
  "periodictable==2.0.2",
  "PhenoGraph==1.5.7",
  "Pillow==10.3.0",
  "plotly==6.0.0",
  "pluggy==1.0.0",
  "pooch==1.8.2",
  "psutil==5.9.5",
  "pycparser==2.21",
  "pydantic==1.10.13",
  "pymongo==4.6.3",
  "pynndescent==0.5.10",
  "pyOpenSSL==25.0.0",
  "pyparsing==3.0.9",
  "PySocks==1.7.1",
  "pytest==7.3.1",
  "pytest-cov==4.0.0",
  "python-dateutil==2.8.2",
  "pytz==2023.3",
  "pyvips==2.2.3",
  "PyWavelets==1.5.0",
  "rasterio==1.4.3",
  "readimc==0.7.0",
  "requests==2.32.4",
  "requests-oauthlib==1.3.1",
  "scanpy==1.9.3",
  "scikit-image==0.25.2",
  "scikit-learn==1.5.0",
  "scipy==1.14.1",
  "seaborn==0.12.2",
  "selenium==4.15.2",
  "session-info==1.0.0",
  "setuptools==80.9.0",
  "shortuuid==1.0.12",
  "six==1.16.0",
  "sniffio==1.3.0",
  "sortedcontainers==2.4.0",
  "soupsieve==2.4.1",
  "spatialdata==0.4.0",
  "statsmodels==0.14.0",
  "stdlib-list==0.8.0",
  "steinbock==0.16.1",
  "tenacity==8.2.2",
  "texttable==1.6.7",
  "threadpoolctl==3.1.0",
  "tifffile==2023.8.12",
  "tomli==2.0.1",
  "tqdm==4.66.3",
  "trio==0.22.0",
  "trio-websocket==0.10.2",
  "typing_extensions==4.9.0",
  "tzdata==2023.3",
  "umap-learn==0.5.2",
  "urllib3==2.5.0",
  "urllib3-secure-extra==0.1.0",
  "URLObject==2.4.3",
  "waitress==3.0.1",
  "Werkzeug==3.0.6",
  "wheel==0.38.4",
  "wsproto==1.2.0",
  "xarray==2024.10.0",
  "xmltodict==0.13.0",
  "xtiff==0.7.9",
  "zarr==2.18.3",
  "zipp==3.19.1"
]

[project.urls]
Homepage = "https://github.com/camlab-bioml/rakaia"
Issues = "https://github.com/camlab-bioml/rakaia/issues"
Source = "https://github.com/camlab-bioml/rakaia"

[project.scripts]
rakaia = "rakaia.wsgi:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rakaia"]

[tool.setuptools.package-data]
rakaia = ["*.json", "*.html", "*.css", "*.ico", "*.js", "*.png", "*.yaml", "*.jpg"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
