[tool.poetry]
name = "rakaia"
version = "0.22.0"
description = "Scalable spatial biology analysis in the browser"
authors = ["matt-sd-watson <mwatson@lunenfeld.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
